src/normalize/index.scss
/*! normalize.css v3.0.2 | MIT License | git.io/normalize */

html {
	font-family: 微软雅黑, -apple-system, Helvetica, "PingFangSC-Regular", "Source Han Sans CN", sans-serif;
	-ms-text-size-adjust: 100%;
	-webkit-text-size-adjust: 100%;
	@extend %default-line-height;
}

body {
	margin: 0;
}

article,
aside,
details,
figcaption,
figure,
footer,
header,
hgroup,
main,
menu,
nav,
section,
summary {
	display: block;
}

audio,
canvas,
progress,
video {
	display: inline-block;
	vertical-align: baseline;
}

audio:not([controls]) {
	display: none;
	height: 0;
}

[hidden],
template {
	display: none;
}

a {
	background-color: transparent;
}

a:active,
a:hover {
	outline: 0;
}

abbr[title] {
	border-bottom: 1px dotted;
}

b,
strong {
	font-weight: bold;
}

dfn {
	font-style: italic;
}

h1 {
	font-size: 2em;
	margin: 0.67em 0;
}

mark {
	background: #ff0;
	color: #000;
}

small {
	font-size: 80%;
}

sub,
sup {
	font-size: 75%;
	line-height: 0;
	position: relative;
	vertical-align: baseline;
}

sup {
	top: -0.5em;
}

sub {
	bottom: -0.25em;
}

img {
	border: 0;
}

svg:not(:root) {
	overflow: hidden;
}

figure {
	margin: 1em 40px;
}

hr {
	box-sizing: content-box;
	height: 0;
}

pre {
	overflow: auto;
}

code,
kbd,
pre,
samp {
	font-family: monospace, monospace;
	font-size: 1em;
}

button,
input,
optgroup,
select,
textarea {
	color: inherit;
	font: inherit;
	margin: 0;
}

button {
	overflow: visible;
}

button,
select {
	text-transform: none;
}

button,
html input[type="button"],
input[type="reset"],
input[type="submit"] {
	-webkit-appearance: button;
	cursor: pointer;
}

button[disabled],
html input[disabled] {
	cursor: default;
}

button::-moz-focus-inner,
input::-moz-focus-inner {
	border: 0;
	padding: 0;
}

input {
	line-height: normal;
}

input[type="checkbox"],
input[type="radio"] {
	box-sizing: border-box;
	padding: 0;
}

input[type="number"]::-webkit-inner-spin-button,
input[type="number"]::-webkit-outer-spin-button {
	height: auto;
}

input[type="search"] {
	-webkit-appearance: textfield;
	box-sizing: content-box;
}

input[type="search"]::-webkit-search-cancel-button,
input[type="search"]::-webkit-search-decoration {
	-webkit-appearance: none;
}

fieldset {
	border: 1px solid #c0c0c0;
	margin: 0 2px;
	padding: 0.35em 0.625em 0.75em;
}

legend {
	border: 0;
	padding: 0;
}

textarea {
	overflow: auto;
}

optgroup {
	font-weight: bold;
}

table {
	border-collapse: collapse;
	border-spacing: 0;
}

td,
th {
	padding: 0;
}

/*去掉a、input和button点击时的蓝色外边框和灰色半透明背景*/

a,
button,
input,
optgroup,
select,
textarea {
	-webkit-tap-highlight-color: transparent;
}

/*移动端初始化默认表单样式*/
html[data-mobile-device=true] {
	font-weight: 400;
	/*number输入的样式*/
	input[type=number] {
		&::-webkit-textfield-decoration-container {
			background-color: transparent;
		}
		&::-webkit-inner-spin-button {
			-webkit-appearance: none;
		}
		&::-webkit-outer-spin-button {
			-webkit-appearance: none;
		}
	}
}

/*清空所有input样式*/
input[type="text"],
input[type="button"],
input[type="submit"],
input[type="number"],
input[type="password"],
select,
button {
	-webkit-appearance: none;
	border-radius: 0;
	outline: none;
}

//取消所有链接的下划线
a {
	text-decoration: none;
}

//表单
//form表单
form[disabled] {
	input, select, textarea, label {
		cursor: not-allowed;
	}
}

//新版本的chrome select是灰色的
select {
	background-color: white;
}

/*--- 微信小程序 ---*/
@if ($platform == 'mp') {
	navigator {
		display: inline-block;
		background-color: transparent;
	}

	button {
		border: none;
		border-radius: 0;
		background-color: transparent;
		height: auto;
		line-height: initial;
		.button-hover {
			background-color: transparent;
		}
	}

	button::after {
		border: none;
		background-color: transparent;
	}
	input {
		height: initial;
	}
}

